--- a/index.html
+++ b/index.html
@@ -6,28 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON 1</title>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
     <div>
-        <span class="squad-name"> </span>
-        <span class="home-town"></span>
-        <span class="formed"></span>
-        <span class="secretBase"></span>
-       
-       <div>
-           <span class="members"></span>
-           <span class="members-name"></span>
-           <span class="members-age"></span>
-           <span class="members-secret"></span>
-           <span class="members-powers"></span>
-       </div> 
+        <!-- <div>
+            <h1 class="squad-name"></h1>
+            <h2 class="home-town"></h2>
+            <h2 class="formed"></h2>
+            <h2 class="secretBase"></h2>
+
+        </div>
+
+        <div>
+            <span class="members-name"></span>
+            <span class="members-age"></span>
+            <span class="members-secret"></span>
+            <li class="members-powers"></li>
+        </div> -->
+
+        <pre id="output"></pre>
 
     </div>
 
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="script.js"></script>
+
+    <script src="script.js"></script>
 
 </body>
 
